Add audio processing notebook and sample files
Added week3/audio.ipynb for audio processing with torchaudio, including code for loading, analyzing, and plotting audio files. Added several sample audio files to week3/audio_files/ and week3/. Updated week2/week2.ipynb kernel metadata to use torch_env.

--- a/week2/week2.ipynb
+++ b/week2/week2.ipynb
@@ -68,13 +68,21 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dafc672d-2b65-43fc-a709-b68202cc337a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (mytorch)",
+   "display_name": "Python (torch_env)",
    "language": "python",
-   "name": "mytorch"
+   "name": "torch-env"
   },
   "language_info": {
    "codemirror_mode": {
