--- a/week3/audio.ipynb
+++ b/week3/audio.ipynb
@@ -271,9 +271,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (torch_env)",
+   "display_name": "torch",
    "language": "python",
-   "name": "torch-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -285,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
